# web-requester

./: .gitignore  README.md  banner.txt  pyproject.toml  requester.py  requests.example.json  requests.json.example  settings.json.example
requests/: namespace.json.example
